# playground

./: .gitignore
bench/: Makefile  README.md  helpers.c  mach_test.c  posix_test.c  time.c
c/: sort.c  vector.c
c/cbench/: bench.c
c/coreutils/: cat.c  chmod.c  cp.c  head.c  ls.c  mkdir.c  pwd.c  reader.c  reader.h  tail.c
c/coreutils/cp/: cp.c
c/coreutils/head/: head.c
c/coreutils/logout/: logout.c
c/coreutils/more/: more.c
c/coreutils/who/: who.c
c/coreutils/whoami/: whoami.c
c/csvreader/: csvreader.c
c/factorial/: main.c
c/list/: list.c
c/me/: README.rst  main.c
c/sort/: sort.c
c/tree/: tree.c
c/vector/: vector.c
go/gomarkov/: markov.go  markov_test.go
owd/: .gitignore  CMakeLists.txt  README.md
owd/docker/fedora/: Dockerfile  run.sh
owd/scripts/: 3rdparty.sh  build.sh
owd/src/commands/: CMakeLists.txt
owd/src/commands/serv/: main.cpp
owd/src/modules/: CMakeLists.txt
owd/src/modules/core/: heap_allocator.cpp  heap_allocator.h  iallocator.h  sigint_waiter.cpp  sigint_waiter.h  stddefs.h
owd/src/modules/http/: server_config.h
owd/src/modules/http/cpprest/: CMakeLists.txt  server.cpp
owd/src/modules/http/crow/: CMakeLists.txt  server.cpp
owd/src/modules/http/libuv/: CMakeLists.txt  server.cpp
owd/src/modules/storage/: idriver.h
owd/src/modules/types/: weather_info.h
owd/src/modules/version/: version.h  version.h.in
owd/src/tests/: CMakeLists.txt
owd/src/tests/core/: heap_allocator_test.cpp
owd/src/tests/http/: server_test.cpp
owd/src/tests/storage/: driver_test.cpp
presentations/: block.go  fanin1.go  hello.go  init.sh  pingpong01.go  pingpong02.go  pingpong03.go  range.go  rostov_meetup_jan_27.slide  select.go  server1.go  workers1.go  workers1_cp.go
python/cakes/: denomination_test.py  highest_product_test.py  merging_ranges.py
python/interviewcake/: highest_product_test.py  merging_ranges.py  numproduct.py  numproduct_test.py  stock_test.py
trash/: atomic.c  atomic.h  elf.c  elf.cpp  mutex.c  mutex.h  sched.c  scoped_ptr.h  shared_ptr.h  stdargs.h  test.cpp  time.MD  wdlock.c  wdlock.h  wdlock_example.c
trash/cpp/: num.cpp  num.hpp  string.cpp  string.hpp  test.cpp
unix/cli_serv/: Makefile  cli.c  cli.h  cli_run.c  date_fork_non_wait_serv.c  date_fork_serv.c  date_serv.c  http_serv.c  now_s.c  serv.c  serv.h  serv_run.c  shrd_cli  shrd_cli.c  shrd_serv  shrd_serv.c  sock.c  sock.h  tcp_serv.c  time_cli.c  time_serv.c  udp_serv.c
unix/coreutils/: Makefile  bc.c  cat.c  chmod.c  chown.c  cp.c  head.c  ls.c  mkdir.c  more.c  pwc.c  pwd.c  reader.c  reader.h  sh.c  tail.c  who.c
